--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  injectable: ^1.5.3
+  get_it: ^7.2.0
+  injectable_generator: ^1.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
