--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   injectable: ^1.5.3
   get_it: ^7.2.0
   injectable_generator: ^1.5.4
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
