--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.18.6 <3.0.0"
 
+# flutter packages pub run build_runner build --delete-conflicting-outputs
+
 dependencies:
   flutter:
     sdk: flutter
@@ -13,6 +15,8 @@ dependencies:
   injectable: ^1.5.3
   get_it: ^7.2.0
   injectable_generator: ^1.5.4
+  freezed: ^2.1.0+1
+  freezed_annotation: ^2.1.0
   dio: ^4.0.6
 
 dev_dependencies:
