--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   freezed: ^2.1.0+1
   freezed_annotation: ^2.1.0
   dio: ^4.0.6
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
