--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,68 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Black.ttf
+          weight: 900
+          style: normal
+        - asset: fonts/Lato-Bold.ttf
+          weight: 700
+          style: normal
+        - asset: fonts/Lato-Regular.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/Lato-Light.ttf
+          weight: 300
+          style: normal
+        - asset: fonts/Lato-Thin.ttf
+          weight: 100
+          style: normal
+    - family: OpenSans
+      fonts:
+        - asset: fonts/OpenSans.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/OpenSans-Italic.ttf
+          weight: 400
+          style: italic
+    - family: ProximaNova
+      fonts:
+        - asset: fonts/proximanova_black.ttf
+          weight: 900
+          style: normal
+        - asset: fonts/proximanova_regular.ttf
+          weight: 400
+          style: normal
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Black.ttf
+          weight: 900
+          style: normal
+        - asset: fonts/Roboto-Bold.ttf
+          weight: 700
+          style: normal
+        - asset: fonts/Roboto-Regular.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/Roboto-Light.ttf
+          weight: 300
+          style: normal
+        - asset: fonts/Roboto-Thin.ttf
+          weight: 100
+          style: normal
+    - family: RedHatDisplay
+      fonts:
+        - asset: fonts/RedHatDisplay-Black.ttf
+          weight: 900
+          style: normal
+        - asset: fonts/RedHatDisplay-Bold.ttf
+          weight: 700
+          style: normal
+        - asset: fonts/RedHatDisplay-Regular.ttf
+          weight: 400
+          style: normal
+        - asset: fonts/RedHatDisplay-Light.ttf
+          weight: 300
+          style: normal
