--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   injectable_generator: ^1.5.4
   freezed: ^2.1.0+1
   freezed_annotation: ^2.1.0
+  json_serializable: ^6.5.1
   dio: ^4.0.6
   flutter_bloc: ^8.1.1
 
