--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_serializable: ^6.5.1
   dio: ^4.0.6
+  pretty_dio_logger: ^1.1.1
   flutter_bloc: ^8.1.1
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
+  flutter_secure_storage: ^7.0.1
 
 dev_dependencies:
   flutter_test:
