--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
   flutter_secure_storage: ^7.0.1
+  flutter_webrtc: ^0.9.24
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.5.3
+  cloud_firestore_web: ^3.4.2
 
 dev_dependencies:
   flutter_test:
