--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,9 +8,16 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-		  classpath 'com.google.gms:google-services:4.3.15'
+		classpath 'com.google.gms:google-services:4.3.15'
+        
     }
 }
+
+// plugins {
+    // //id 'com.android.application' version '7.1.3' apply false
+    // //id 'com.android.library' version '7.1.3' apply false
+    // id 'com.google.gms.google-services' version '4.4.0' apply false
+// }
 
 allprojects {
     repositories {
@@ -30,3 +37,5 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
