--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,26 +13,26 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   # di
-  injectable: ^1.5.3
+  injectable: ^2.3.2
   get_it: ^7.2.0
-  injectable_generator: ^1.5.4
+  injectable_generator: ^2.4.1
   # serialization and codogeneration
-  freezed: ^2.1.0+1
-  freezed_annotation: ^2.1.0
-  json_serializable: ^6.5.1
+  freezed: ^2.4.6
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
   # http client
-  dio: ^4.0.6
+  dio: ^5.4.0
   # logger
   pretty_dio_logger: ^1.1.1
   # state manager
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^8.1.3
   bloc_concurrency: ^0.2.2
   # storage
-  hydrated_bloc: ^8.1.0
+  hydrated_bloc: ^9.1.3
   path_provider: ^2.0.11
-  flutter_secure_storage: ^7.0.1
+  flutter_secure_storage: ^9.0.0
   # webrtc
-  flutter_webrtc: ^0.9.24
+  flutter_webrtc: ^0.9.47
   # firebase
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.3
@@ -48,8 +48,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
 
 flutter:
   uses-material-design: true
