--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
    <application
         android:label="communication_client"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-		 
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -34,6 +34,19 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- DEV "https://10.0.2.2/guest/ -->
+                <!-- <data android:scheme="https"
+                    android:host="10.0.2.2"
+                    android:pathPrefix="/guest/" /> -->
+                <!-- PROD "https://10.0.2.2/guest/ -->
+                <data android:scheme="https"
+                    android:host="communucation.ru"
+                    android:pathPrefix="/guest/" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
