--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,13 @@ dependencies:
   # logger
   pretty_dio_logger: ^1.1.1
   # state manager
+  provider: ^6.1.1
   flutter_bloc: ^8.1.3
   bloc_concurrency: ^0.2.2
   # storage
   hydrated_bloc: ^9.1.3
   path_provider: ^2.0.11
-  flutter_secure_storage: ^9.0.0
+  # flutter_secure_storage: ^9.0.0
   # webrtc
   flutter_webrtc: ^0.9.47
   # firebase
@@ -43,7 +44,9 @@ dependencies:
   flutter_spinkit: ^5.2.0
   # utils
   # modal_bottom_sheet: ^2.1.2
+  share_plus: ^6.3.0
   flutter_staggered_grid_view: ^0.7.0
+  helpers: ^1.2.3
 
 dev_dependencies:
   flutter_test:
