--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc_concurrency: ^0.2.2
   # storage
-  hydrated_bloc: ^9.1.3
+  shared_preferences: ^2.2.2
+  # hydrated_bloc: ^9.1.3
   path_provider: ^2.0.11
   # flutter_secure_storage: ^9.0.0
   # webrtc
